--- a/internship.html
+++ b/internship.html
@@ -46,15 +46,15 @@
 <p>Posted on:: 2019-07-25</p>
 <hr/>
 <h5><a href='http://newamerica.applytojob.com/apply/5CNdL5tAYu/Fall-2019-Communications-Intern-Paid'>Fall 2019 Communications Intern (Paid) - New America - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://newamerica.applytojob.com/apply/BFdhFV9ckr/Fall-2019-Political-Reform-Internship-Paid'>Fall 2019 - Political Reform Internship (Paid) - New America - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://newamerica.applytojob.com/apply/8ltBBtLywt/Education-Policy-Intern-Higher-Education-Paid'>Education Policy Intern- Higher Education (Paid) - New America - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://dosomething.applytojob.com/apply/3OYhbQz3SL/DSS-Research-And-Strategy-Intern-Fall-2019-Spring-2020'>DSS Research and Strategy Intern (Fall 2019- Spring 2020) - DoSomething.org - Career Page</a></h5> 
@@ -62,11 +62,11 @@
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://newamerica.applytojob.com/apply/zEAuNjl3XN/Summer-2019-Education-Policy-Digital-Communications-Intern-paid'>Summer 2019 - Education Policy Digital Communications Intern (paid) - New America - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://newamerica.applytojob.com/apply/mk2vPYdqPt/Fall-Internship-With-Blockchain-Trust-Accelerator-BTA-At-New-America'>Fall Internship with Blockchain Trust Accelerator (BTA) at New America - New America - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://lovecrafts.recruiterbox.com/jobs/fk03f1w'>
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/kayak/jobs/4369305002'>Job Application for Intern at KAYAK</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kayak/jobs/4369305002'>Job Application for Intern at KAYAK</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -149,7 +149,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/rdi/jobs/fall-2019-web-dev-intern-angular-c-typescript-aKAZCgRJur6yCNaKld2Sj6'>[Fall 2019] Web Dev Intern (Angular/C#/Typescript) #0128 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/rdi/jobs/fall-2019-web-dev-intern-angular-c-typescript-aKAZCgRJur6yCNaKld2Sj6'>[Fall 2019] Web Dev Intern (Angular/C#/Typescript) #0128 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -189,7 +189,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
       Internship @ Credit Risk & Models - Luminus
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -309,7 +309,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/managedbyq/jobs/1783792'>Job Application for IT Support Intern at Managed By Q</a></h5> 
+<h5><a href='https://boards.greenhouse.io/managedbyq/jobs/1783792'>Job Application for IT Support Intern at Managed By Q</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -317,7 +317,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364005002'>Job Application for Internship in Accounts Payable - Freight at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364005002'>Job Application for Internship in Accounts Payable - Freight at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -350,7 +350,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HubbardtonForge/743999689534510-digital-marketing-intern'>Hubbardton Forge Digital Marketing Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HubbardtonForge/743999689534510-digital-marketing-intern'>Hubbardton Forge Digital Marketing Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -370,7 +370,7 @@ Stuart.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999692087300-datascience-internship'>Optimizely Datascience Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999692087300-datascience-internship'>Optimizely Datascience Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -394,7 +394,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1786671'>Job Application for Marketing Intern (Acquisition) at Curology</a></h5> 
+<h5><a href='https://boards.greenhouse.io/curology/jobs/1786671'>Job Application for Marketing Intern (Acquisition) at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -420,7 +420,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artnight.join.com/jobs/264645-internship-french-expansion-m-f-x'>Job @ ArtNight (Berlin): Internship: French Expans... | JOIN</a></h5> 
+<h5><a href='https://artnight.join.com/jobs/264645-internship-french-expansion-m-f-x'>Job @ ArtNight (Berlin): Internship: French Expans... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
