--- a/frontend.html
+++ b/frontend.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/koldpartners/0d0d69c1-6853-446b-b69a-35455769705e'>Kold+Partners - Good Monday - Senior Frontend Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://latitudeinc.applytojob.com/apply/V10V2xOXa1/Front-End-Developer-Needed-Near-Norristown'>Front End Developer Needed Near Norristown - Latitude, Inc. - Career Page</a></h5> 
@@ -47,11 +47,11 @@
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://careers.jobscore.com/careers/sojern/jobs/lead-frontend-developer-afpg9mRKer6BKGaKld2Sj6'>Lead Frontend Developer #1072 job at Sojern in Istanbul, Turkey, powered by JobScore</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Istanbul Istanbul</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Santa Clara,</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
 <h5><a href='https://shijigroup.join.com/jobs/255638-senior-front-end-developer'>Job @ Shiji (Wroc?aw): Senior Front-end Developer | JOIN</a></h5> 
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1789011'>Job Application for Staff Frontend Engineer, Ads Engineering  at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1789011'>Job Application for Staff Frontend Engineer, Ads Engineering  at Reddit</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/front-end-developer-angular-13045'>Front-End Developer (Angular) - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/front-end-developer-angular-13045'>Front-End Developer (Angular) - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -178,7 +178,7 @@
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317027002'>Job Application for Sr. Frontend Engineer  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317027002'>Job Application for Sr. Frontend Engineer  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -186,7 +186,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/JrMBPcLagR/Front-End-Developer'>Front End Developer - iTech Media - Career Page</a></h5> 
+<h5><a href='http://itech.applytojob.com/apply/JrMBPcLagR/Front-End-Developer'>Front End Developer - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -194,7 +194,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/9dfd2d9f-563c-47a6-ac44-3697aec2fd20'>Helbiz Inc. - Senior Front - End Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/9dfd2d9f-563c-47a6-ac44-3697aec2fd20'>Helbiz Inc. - Senior Front - End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -250,7 +250,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://oetkerdigital.join.com/jobs/251604-senior-frontend-engineer'>Job @ Oetker Digital (Berlin): (Senior) Frontend E... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/251604-senior-frontend-engineer'>Job @ Oetker Digital (Berlin): (Senior) Frontend E... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -285,7 +285,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Frontend Web Developer - Roku at created 10-Jul-2019.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ovt/job/oLVCafwc'>Omnivision Technologies, Inc Careers - Sr./Staff CAD Engineer-Front End</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ovt/job/oLVCafwc'>Omnivision Technologies, Inc Careers - Sr./Staff CAD Engineer-Front End</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
